--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "doodle-ar",
   "version": "1.0.0",
-  "description": "",
   "main": "sketch.js",
   "scripts": {
     "start": "node server.js",
@@ -10,12 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tensorflow/tfjs": "^1.6.1",
+    "@tensorflow/tfjs-node": "^1.2.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "p5": "^1.0.0"
+    "fs": "0.0.1-security",
+    "multer": "^1.4.2",
+    "path": "^0.12.7",
+    "util": "^0.12.2"
   },
-  "engines" : {
+  "engines": {
     "node": "12.x"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
