--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@tensorflow/tfjs-node": "^1.2.6",
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "path": "^0.12.7",
     "util": "^0.12.2"
