--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "path": "^0.12.7",
+    "png-js": "^1.0.0",
     "util": "^0.12.2"
   },
   "engines": {
